public/stylesheets/dynamicstyles.css
/* Half screens */
@media only screen and (min-width: 600px)
{
    :root {
        --large-font: 12px;
        --medium-font: 11px;
        --sm-medium-font: 10px;
        --small-font: 9px;
        --xsmall-font: 8px;

        --usgs-image-height: 3em;
        --usgs-image-width: 8em;

        --color-input-width: 5em;
        --color-input-height: 2em;

        --max-image-width: 55%;
        --max-header-image-width: 4em;

        /* Center Icon*/
        --max-title-height: 4em;
        --max-title-width: 9em;

        --gif-width: 100%;

        --main-export-box-height: 14em;
        --main-export-box-width: 15em;
        --main-export-title-font: 18px;

        --toolbox-width: 20%;

        --export-btn-width: 30px;
        --export-btn-height: 30px;

        --toolbox-min-height: 0;
        --toolbox-max-height: 130px;
        --toolbox-min-width: 100%;
        --toolbox-max-width: 100%;
        --edittoolbox-max-height: 175px;

        --toolbox-minibtn-min-width: 30px;
        --toolbox-minibtn-max-width: 30px;
        --toolbox-minibtn-min-height: 25px;
        --toolbox-minibtn-max-height: 30px;

        --inner-main-content-max-height: 70vh;

        --min-svg-btn: 28px;
        --max-svg-btn: 28px;

        --svg-icon-width: 27px;
        --svg-icon-height: 2.5em;

        --svg-icon-width: 30px;

        --header-height: 5%;
        --main-content-height: 80vh;
        --toolcontainer-height: 80vh;
        --footer-height: 4%;

        --btn-group-btn: auto;

        /* New Section Here */
        --inner-main-content-max-width: 75vw;
    }
}

@media only screen and (min-width: 930px)
{
    :root {
        --large-font: 15px;
        --medium-font: 14px;
        --sm-medium-font: 13px;
        --small-font: 12px;
        --xsmall-font: 10px;

        --usgs-image-height: 4em;
        --usgs-image-width: 9.5em;

        --color-input-width: 5em;
        --color-input-height: 2em;

        --max-image-width: 55%;
        --max-header-image-width: 5em;

        /* Center Icon*/
        --max-title-height: 5em;
        --max-title-width: 11em;

        --gif-width: 60%;

        --main-export-box-height: 14em;
        --main-export-box-width: 15em;
        --main-export-title-font: 18px;

        --toolbox-width: 15%;

        --export-btn-width: 2.5em;
        --export-btn-height: 2.5em;

        --toolbox-min-height: 0;
        --toolbox-max-height: 130px;
        --toolbox-min-width: 90%;
        --toolbox-max-width: 100%;
        --edittoolbox-max-height: 200px;

        --toolbox-minibtn-min-width: 30px;
        --toolbox-minibtn-max-width: 30px;
        --toolbox-minibtn-min-height: 25px;
        --toolbox-minibtn-max-height: 30px;

        --inner-main-content-max-height: 79vh;

        /* Add Object Btns */
        --min-svg-btn: 30px;
        --max-svg-btn: 30px;

    
        --svg-icon-height: 2.5em;
        --svg-icon-width: 30px;

        --header-height: 5%;
        --main-content-height: 80vh;
        --toolcontainer-height: 80vh;
        --footer-height: 4%;

        --btn-group-btn: 55px;

        /* New Section Here */
        --inner-main-content-max-width: 81vw;
    }
}

/*  2k Screen */
@media only screen and (min-width:1800px) {
    :root {
        --large-font: 20px;
        --medium-font: 22px;
        --sm-medium-font: 20px;
        --small-font: 18px;
        --xsmall-font: 15px;

        --max-image-width: 70%;
        --max-header-image-width: 6em;

        /* Top left Icon*/
        --usgs-image-height: 6m;
        --usgs-image-width: 13em;

        /* Center Icon*/
        --max-title-height: 6em;
        --max-title-width: 13em;

        --main-export-box-heigh: 300px;

        --header-height: 6%;
        --main-content-height: 80vh;
        --toolcontainer-height: 80vh;
        --footer-height: 4%;

        /* Add Object Btns */
        --min-svg-btn: 35px;
        --max-svg-btn: 35px;

        --btn-group-btn: 60px;

        --svg-icon-width: 50px;
    }
}

/* Native 4k+ Resolution */
@media only screen and (min-width:2400px) {
    :root {
        --large-font: 28px;
        --medium-font: 22px;
        --sm-medium-font: 20px;
        --small-font: 18px;
        --xsmall-font: 15px;

        --max-image-width: 70%;
        --max-header-image-width: 8em;

        /* Top left Icon*/
        --usgs-image-height: 6em;
        --usgs-image-width: 13em;

        /* Center Icon*/
        --max-title-height: 6em;
        --max-title-width: 14em;

        /* Add Object Btns */
        --min-svg-btn: 42px;
        --max-svg-btn: 42px;

        --btn-group-btn: 70px;
        --svg-icon-width: 65px;
        --svg-icon-height: 65px;

        --main-export-box-heigh: 300px;

        --header-height: 6%;
        --main-content-height: 86vh;
        --toolcontainer-height: 86vh;
        --footer-height: 4%;
    }
}

